--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "url": "https://github.com/fromatob/vue-stripe-elements/issues"
   },
   "homepage": "https://github.com/fromatob/vue-stripe-elements#readme",
-  "dependencies": {
-    "lodash": "^4.17.11"
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^6.2.10",
